# blacksmith

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  blacksmith-v0-prd.md  blacksmith.config.toml  blacksmith.toml  langgraph.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
blacksmith/: __init__.py  __main__.py  cli.py  config.py  contract.py  costs.py  dashboard.py  events.py  executor.py  gate.py  graph.py  index.py  issue.py  memory.py  metrics.py  planner.py  pr_comments.py  render.py  respond.py  sandbox.py  sbfl.py  state.py  transcript.py  worktree.py
blacksmith/nodes/: __init__.py  hitl.py  implement.py  plan.py  pr.py  review.py
blacksmith/remote/: __init__.py  client.py  spike.py  (+1 more)
docs/: code-review-prompt.md  prd-authoring-guide.md  remote-node-spike.md
scripts/: smoke.py
tests/: test_cli_approval.py  test_cli_gate_render.py  test_cli_progress.py  test_cli_render.py  test_cli_resume.py  test_cli_validate.py  test_cli_version.py  test_clone.py  test_config.py  test_config_no_dead_fields.py  test_contract.py  test_cost_events.py  test_cost_instrumentation.py  test_cost_summary.py  test_costs.py  test_dashboard_cli_wiring.py  test_dashboard_live.py  test_dashboard_server.py  test_dashboard_ui.py  test_e2e.py  test_escalation.py  test_executor.py  test_fanout_self_heal.py  test_fix.py  test_fresh_run.py  test_gate.py  test_graph.py  test_graph_sbfl.py  test_hitl.py  test_human_qa.py  test_implement.py  test_implement_continuation.py  test_index.py  test_issue_ingestion.py  test_live_intra_node.py  test_main.py  test_memory.py  test_memory_lessons.py  test_metrics.py  test_multi_unit.py  (+27 more)
(+5 files in other folders)
