[project]
name = "blacksmith"
version = "0.0.0"
description = "Agentic development orchestrator — LangGraph state machine + Claude Agent SDK executor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1",
    "claude-agent-sdk>=0.2.105",
    "pydantic>=2.11",
    "pyyaml>=6.0.3",
]

[project.scripts]
blacksmith = "blacksmith.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blacksmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
